src/objects/copado_envmgr__EnvironmentDefinition__c.object
<CustomObject>
    <description>Definition of Sandboxes or Scratch Orgs</description>
    <fields>
        <fullName>copado_envmgr__ApexAfterMetadataDeployment__c</fullName>
        <description>Anonymous Apex code to be executed after all the Metadata has been deployed</description>
        <inlineHelpText>Anonymous Apex code to be executed after all the Metadata has been deployed</inlineHelpText>
        <label>Apex After Metadata Deployment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado_envmgr__ApexAfterOrgCreation__c</fullName>
        <description>Anonymous Apex code to be executed after Sandbox/Scratch Org Creation</description>
        <inlineHelpText>Anonymous Apex code to be executed after Sandbox/Scratch Org Creation</inlineHelpText>
        <label>Apex After Org Creation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado_envmgr__ApexAfterPackageInstallation__c</fullName>
        <description>Anonymous Apex code to be executed after all the Salesforce Packages are installed</description>
        <inlineHelpText>Anonymous Apex code to be executed after all the Salesforce Packages are installed</inlineHelpText>
        <label>Apex After Package Installation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado_envmgr__AvailableOrgs__c</fullName>
        <label>Available Orgs</label>
        <summaryFilterItems>
            <field>copado_envmgr__EnvironmentOrg__c.copado_envmgr__Status__c</field>
            <operation>equals</operation>
            <value>Available</value>
        </summaryFilterItems>
        <summaryForeignKey>copado_envmgr__EnvironmentOrg__c.copado_envmgr__EnvironmentDefinition__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>copado_envmgr__DefaultBranch__c</fullName>
        <description>Default branch where the metadata will be taken. It must be part of the Project/Pipeline related to this Environment, or empty (meaning that no deployment will be run)</description>
        <inlineHelpText>Default branch where the metadata will be taken. It must be part of the Project/Pipeline related to this Environment, or empty (meaning that no deployment will be run)</inlineHelpText>
        <label>Source Branch of the Metadata</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado_envmgr__DefinitionJson__c</fullName>
        <defaultValue>&quot;{&quot; &amp;BR()&amp;
&quot;     \&quot;sandboxName\&quot;: \&quot;deveopment-org-{&quot;&amp;&quot;!&quot;&amp;&quot;RANDOM}\&quot;,&quot; &amp;BR()&amp;
&quot;     \&quot;licenseType\&quot;: \&quot;Developer\&quot;,&quot; &amp;BR()&amp;
&quot;     \&quot;autoActivate\&quot;: true&quot; &amp;BR()&amp;
&quot;}&quot; &amp;BR()</defaultValue>
        <description>Sandbox or Scratch Org JSON. See Salesforce documentation for details</description>
        <inlineHelpText>Sandbox or Scratch Org JSON. See Salesforce documentation for details</inlineHelpText>
        <label>Definition Json</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado_envmgr__DeleteJobTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delete Job Template</label>
        <referenceTo>copado__JobTemplate__c</referenceTo>
        <relationshipLabel>Environment Definitions (Delete Job Template)</relationshipLabel>
        <relationshipName>Environment_Definitions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado_envmgr__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado_envmgr__DesiredAvailableOrgs__c</fullName>
        <description>Set this value if you want to create a pool of available Orgs. Every time an Org is used, a new org will be created behind the scenes, so the next time an org is desired, it is already available.

If this is not set, the Enviroments will be created on-demand</description>
        <inlineHelpText>Set this value if you want to create a pool of available Orgs. Every time an Org is used, a new org will be created behind the scenes, so the next time an org is desired, it is already available.

If this is not set, the Enviroments will be created on-demand</inlineHelpText>
        <label>Number of desired Available Orgs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado_envmgr__ExpirationDays__c</fullName>
        <defaultValue>30</defaultValue>
        <description>Expiration date you desire for this Sandbox or Scratch Org. For Scratch Orgs Expiration must be less than 30 days.</description>
        <inlineHelpText>Expiration date you desire for this Sandbox or Scratch Org. For Scratch Orgs Expiration must be less than 30 days.</inlineHelpText>
        <label>Expiration (Days)</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado_envmgr__Git_Repository__c</fullName>
        <formula>copado_envmgr__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__c</formula>
        <label>Git Repository</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado_envmgr__JobTemplate__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Customizable Job Template that will be executed when requesting a new Environment</description>
        <inlineHelpText>Customizable Job Template that will be executed when requesting a new Environment</inlineHelpText>
        <label>Create Job Template</label>
        <referenceTo>copado__JobTemplate__c</referenceTo>
        <relationshipLabel>Environment Definitions</relationshipLabel>
        <relationshipName>Environment_Definitions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado_envmgr__OrgType__c</fullName>
        <label>Org Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sandbox</fullName>
                    <default>true</default>
                    <label>Sandbox</label>
                </value>
                <value>
                    <fullName>Scratch Org</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado_envmgr__PackageInstallationJson__c</fullName>
        <description>JSON in the format {&quot;package id&quot;: {&quot;name&quot;: &quot;package name and version&quot;, &quot;installation-key&quot;: &quot;&quot;, ... } Remember: package ID&apos;s are the ones starting with &quot;04t&quot;</description>
        <inlineHelpText>JSON in the format {&quot;package id&quot;: {&quot;name&quot;: &quot;package name and version&quot;, &quot;installation-key&quot;: &quot;&quot;, ... } Remember: package ID&apos;s are the ones starting with &quot;04t&quot;</inlineHelpText>
        <label>Package Installation Json</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado_envmgr__ParentEnvironment__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Sandbox Parent or DevHub Environment</description>
        <inlineHelpText>Sandbox Parent or DevHub Environment</inlineHelpText>
        <label>Parent Environment</label>
        <referenceTo>copado__Environment__c</referenceTo>
        <relationshipLabel>Environment Definitions</relationshipLabel>
        <relationshipName>Environment_Definitions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado_envmgr__PipelineDestinationEnvId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Destination Environment in Pipeline</label>
        <referenceTo>copado__Environment__c</referenceTo>
        <relationshipLabel>Environment Definitions (Destination Environment in Pipeline)</relationshipLabel>
        <relationshipName>Environment_Definitions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado_envmgr__Pipeline__c</fullName>
        <formula>copado_envmgr__Project__r.copado__Deployment_Flow__c</formula>
        <label>Pipeline</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado_envmgr__Project__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Project</label>
        <referenceTo>copado__Project__c</referenceTo>
        <relationshipLabel>EnvironmentDefinitions</relationshipLabel>
        <relationshipName>EnvironmentDefinitions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado_envmgr__Status__c</fullName>
        <description>Only &quot;Ready&quot; environment definitions can be used by regular Users, and &quot;Developing&quot; only mocks the creation of Orgs (see the documentation for details).</description>
        <inlineHelpText>Only &quot;Ready&quot; environment definitions can be used by regular Users, and &quot;Developing&quot; only mocks the creation of Orgs (see the documentation for details).</inlineHelpText>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Developing</fullName>
                    <default>true</default>
                    <label>Developing</label>
                </value>
                <value>
                    <fullName>Testing</fullName>
                </value>
                <value>
                    <fullName>Ready</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Environment Definition</label>
    <listViews>
        <fullName>copado_envmgr__All</fullName>
        <columns>NAME</columns>
        <columns>copado_envmgr__OrgType__c</columns>
        <columns>copado_envmgr__ExpirationDays__c</columns>
        <columns>copado_envmgr__DefaultBranch__c</columns>
        <columns>copado_envmgr__Project__c</columns>
        <columns>copado_envmgr__JobTemplate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Environment Definition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Environment Definitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>